<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/register_text_color"
    tools:context="com.souzaemerson.mvpapplication.presentation.register.RegisterActivity">

    <ImageButton
        android:id="@+id/back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/ic_back"
        android:contentDescription="@string/back_to_login" />

    <LinearLayout
        android:id="@+id/information_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/scroll"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="80dp"
            android:gravity="center"
            android:text="@string/registre_se"
            android:textAllCaps="true"
            android:textColor="@color/register_text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/register_text_color"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/register_text_color"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/e_mail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/register_text_color"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmar"
            android:backgroundTint="@color/button_text_color"
            android:textColor="@color/register_text_color"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>